<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <com.google.android.gms.maps.MapView
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/black_translucent"
            android:layout_margin="@dimen/app_base_padding"
            android:layout_gravity="bottom">

            <RelativeLayout
                android:id="@+id/addressLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/app_base_padding"
                    android:layout_marginRight="@dimen/app_base_padding"
                    android:orientation="horizontal"
                    android:layout_centerVertical="true">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="50dp">

                        <TextView
                            android:layout_width="85dp"
                            android:layout_height="wrap_content"
                            android:text="@string/address_label"
                            android:textSize="17sp"
                            android:textColor="@android:color/white"
                            android:layout_centerVertical="true"
                            android:textStyle="bold"/>
                    </RelativeLayout>

                    <TextView
                        android:id="@+id/address"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="17sp"
                        android:textColor="@android:color/white"
                        android:layout_marginLeft="5dp"
                        android:freezesText="true"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"/>
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/latitudeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/app_base_padding"
                    android:layout_marginRight="@dimen/app_base_padding"
                    android:orientation="horizontal"
                    android:layout_centerVertical="true">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="50dp">

                        <TextView
                            android:layout_width="85dp"
                            android:layout_height="wrap_content"
                            android:text="@string/latitude_label"
                            android:textSize="17sp"
                            android:textColor="@android:color/white"
                            android:layout_centerVertical="true"
                            android:textStyle="bold"/>
                    </RelativeLayout>

                    <TextView
                        android:id="@+id/latitude"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="17sp"
                        android:textColor="@android:color/white"
                        android:layout_marginLeft="5dp"
                        android:freezesText="true"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"/>
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/longitudeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/app_base_padding"
                    android:layout_marginRight="@dimen/app_base_padding"
                    android:orientation="horizontal"
                    android:layout_centerVertical="true">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="50dp">

                        <TextView
                            android:layout_width="85dp"
                            android:layout_height="wrap_content"
                            android:text="@string/longitude_label"
                            android:textSize="17sp"
                            android:textColor="@android:color/white"
                            android:layout_centerVertical="true"
                            android:textStyle="bold"/>
                    </RelativeLayout>

                    <TextView
                        android:id="@+id/longitude"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="17sp"
                        android:textColor="@android:color/white"
                        android:layout_marginLeft="5dp"
                        android:freezesText="true"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"/>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>