<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/app_base_padding">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1.0"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_height="@dimen/app_list_picture"
                android:layout_width="@dimen/app_list_picture"
                android:layout_marginRight="10dp"
                android:id="@+id/icon"
                android:layout_centerInParent="true"
                android:visibility="gone"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:id="@+id/title"
                    android:textStyle="bold"
                    android:textSize="17sp"
                    android:textColor="@color/text"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/app_base_margin">

                    <RelativeLayout
                        android:id="@+id/addressLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_centerVertical="true">

                            <RelativeLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:minHeight="30dp">

                                <TextView
                                    android:layout_width="85dp"
                                    android:layout_height="wrap_content"
                                    android:text="@string/address_label"
                                    android:textSize="15sp"
                                    android:textColor="@color/text"
                                    android:layout_centerVertical="true"
                                    android:textStyle="bold"/>
                            </RelativeLayout>

                            <TextView
                                android:id="@+id/address"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:textSize="15sp"
                                android:textColor="@color/text"
                                android:layout_marginLeft="5dp"
                                android:freezesText="true"
                                android:layout_gravity="center_vertical"
                                android:gravity="center_vertical"/>
                        </LinearLayout>
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/latitudeLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_centerVertical="true">

                            <RelativeLayout
                                android:layout_width="wrap_content"
                                android:layout_height="30dp">

                                <TextView
                                    android:layout_width="85dp"
                                    android:layout_height="wrap_content"
                                    android:text="@string/latitude_label"
                                    android:textSize="15sp"
                                    android:textColor="@color/text"
                                    android:layout_centerVertical="true"
                                    android:textStyle="bold"/>
                            </RelativeLayout>

                            <TextView
                                android:id="@+id/latitude"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:textSize="15sp"
                                android:textColor="@color/text"
                                android:layout_marginLeft="5dp"
                                android:freezesText="true"
                                android:layout_gravity="center_vertical"
                                android:gravity="center_vertical"/>
                        </LinearLayout>
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/longitudeLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_centerVertical="true">

                            <RelativeLayout
                                android:layout_width="wrap_content"
                                android:layout_height="30dp">

                                <TextView
                                    android:layout_width="85dp"
                                    android:layout_height="wrap_content"
                                    android:text="@string/longitude_label"
                                    android:textSize="15sp"
                                    android:textColor="@color/text"
                                    android:layout_centerVertical="true"
                                    android:textStyle="bold"/>
                            </RelativeLayout>

                            <TextView
                                android:id="@+id/longitude"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:textSize="15sp"
                                android:textColor="@color/text"
                                android:layout_marginLeft="5dp"
                                android:freezesText="true"
                                android:layout_gravity="center_vertical"
                                android:gravity="center_vertical"/>
                        </LinearLayout>
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/radiusLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_centerVertical="true">

                            <RelativeLayout
                                android:layout_width="wrap_content"
                                android:layout_height="30dp">

                                <TextView
                                    android:layout_width="85dp"
                                    android:layout_height="wrap_content"
                                    android:text="@string/radius_label"
                                    android:textSize="15sp"
                                    android:textColor="@color/text"
                                    android:layout_centerVertical="true"
                                    android:textStyle="bold"/>
                            </RelativeLayout>

                            <TextView
                                android:id="@+id/radius"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:textSize="15sp"
                                android:textColor="@color/text"
                                android:layout_marginLeft="5dp"
                                android:freezesText="true"
                                android:layout_gravity="center_vertical"
                                android:gravity="center_vertical"/>
                        </LinearLayout>
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>

